# Datenvisualisierung

./: .gitignore  Cargo.toml  README.md  app.js  canvas.js  data_proc.py  index.html  index.js  package.json  style.css  webpack.config.js
data/control_elements/: style.css
src/: app_state.rs  common_funcs.rs  constants.rs  gl_setup.rs  lib.rs
src/programs/: color_2d.rs  common_funcs.rs  data.rs  globe.rs  mod.rs
src/shaders/: color_2s.wgsl
src/shaders/fragment/: color_2d.glsl  globe.glsl  globe.rs  globe2.glsl  globe2.rs  mod.rs  varying_color_from_vertex.rs
src/shaders/vertex/: color_2d.glsl  data.rs  globe.glsl  globe.rs  graph_3d.glsl  graph_3d.rs  mod.rs
