[package]
name = "wasm_boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.55"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.78"
cargo-wgsl = "0.0.9"
nalgebra = "0.29.0"
regex = "1.5.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlVideoElement',
    'HtmlImageElement',
    'EventListener',
    'CustomEvent',
    'CustomEventInit',
    'EventInit',
    'MouseEvent',
    'WheelEvent',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlTexture',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
]
